@@ -636,6 +636,7 @@ private:
 	FileEntryVector				m_arStatusArray;
 	std::vector<size_t>			m_arListArray;
 	std::map<CString, LONG_PTR>	m_changelists;
+	bool						m_bHasIgnoreGroup;
 	CTSVNPathList				m_ConflictFileList;
 	CTSVNPathList				m_StatusFileList;
 	CString						m_sLastError;
